--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,4 +20,7 @@
 
     = render 'shared/environment_variables'
 
-    = requirejs_include_tag("routes/#{controller_name}/#{action_name}")
+    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV['GOOGLE_MAPS_API_KEY']}"
+    = javascript_include_tag 'google-maps/oms.min'
+    = javascript_pack_tag 'application'
+    = javascript_pack_tag "#{controller_name}-#{action_name}"
